--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,3 @@
-html, body, #root {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden; /* Hide default scrolling */
-}
-
 @font-face {
   font-family: 'Inter';
   src: url('/font/Inter-Regular.ttf') format('truetype');
@@ -43,6 +36,7 @@ body {
   background: var(--background);
   color: var(--accent);
   overflow-x: hidden;
+  margin: 0;
   min-height: 100vh;
   position: relative;
 }
